Revision history for pantry

{{$NEXT}}

0.011     2012-10-11 17:02:23 America/New_York

    [Fixed]

    - Removed a spurious dump of node data during environment syncs

0.010     2012-09-28 17:25:07 America/New_York

    [Added]

    - Added support for data bags

0.009     2012-08-16 14:56:25 America/New_York

    [Added]

    - Added support for multiple environments, including
      environment attributes and environment-specific
      run lists in roles

0.008     2012-08-02 22:53:18 America/New_York

    [Added]

    - 'pantry create' now supports creating empty cookbook boilerplate

0.007     2012-08-02 19:20:08 America/New_York

    [Added]

    - 'pantry apply' now converts 'true' and 'false' to
      actual JSON booleans in the configuration file

0.006     2012-07-12 14:34:17 America/New_York

    [Added]

    - 'pantry create' now accepts 'host', 'port', and 'user'
      parameters that override the default SSH connection
      settings.

0.005     2012-05-11 13:25:40 America/New_York

    [Added]

    - Added support for Chef roles: creating, deleting, apply
      recipes, etc.  Chef roles may also be applied to node
      and role run_lists

    - Node and role names can often be abbreviated to
      a unique prefix, e.g. "foo" for "foo.example.com"

0.004     2012-05-04 16:01:12 America/New_York

    [Added]

    - 'pantry sync' downloads the node run-report to the 'reports'
      directory in the pantry.  This is useful for examining the
      state of the node and eventually may be useful for searching
      nodes based on configuration/state data.

    - 'pantry rename' command added to rename nodes

    - 'pantry delete' command added to delete nodes

    - pantry commands that take a single 'node NAME' target may
      specify a NAME of '-' to run the command against a list of
      names read from STDIN

    [Fixed]

    - 'pantry sync' was crashing due to Net::OpenSSH not working with